--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -84,7 +84,7 @@
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
-    <script src="bower_components/es5-dom-shim/__COMPILE/a.js"></script>    
+    <script src="bower_components/es5-dom-shim/__COMPILE/a.js"></script>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -117,11 +117,16 @@
     <script src="bower_components/kubernetes-label-selector/labelFilter.js"></script>
     <script src="bower_components/kubernetes-object-describer/dist/object-describer.js"></script>
     <script src="bower_components/openshift-object-describer/dist/object-describer.js"></script>
+    <script src="bower_components/angular-extension-registry/dist/angular-extension-registry.min.js"></script>
+    <script src="bower_components/angular-extension-registry/dist/compiled-templates.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <!-- extension manager demo -->
+        <script src="scripts/extension.config.1.js"></script>
+        <!-- /extension manager demo -->
         <script src="scripts/services/logger.js"></script>
         <script src="scripts/services/ws.js"></script>
         <script src="scripts/services/userstore.js"></script>
