service for adding extensions

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -126,6 +126,7 @@
         <script src="scripts/app.js"></script>
         <!-- extension manager demo -->
         <script src="scripts/extension.config.1.js"></script>
+        <script src="scripts/extension.config.2.js"></script>
         <!-- /extension manager demo -->
         <script src="scripts/services/logger.js"></script>
         <script src="scripts/services/ws.js"></script>
