--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -85,7 +85,7 @@
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
-    <script src="bower_components/es5-dom-shim/__COMPILE/a.js"></script>    
+    <script src="bower_components/es5-dom-shim/__COMPILE/a.js"></script>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -179,6 +179,24 @@
         <script src="scripts/filters/resources.js"></script>
         <script src="scripts/filters/util.js"></script>
         <script src="scripts/extensions/javaLink.js"></script>
+
+        <!-- logs -->
+        <script src="scripts/projects/logs/config.js"></script>
+
+        <script src="scripts/projects/pods/services/pods.js"></script>
+        <script src="scripts/projects/logs/services/podLogs.js"></script>
+        <script src="scripts/projects/builds/services/builds.js"></script>
+        <script src="scripts/projects/logs/services/buildLogs.js"></script>
+
+        <script src="scripts/projects/logs/controllers/start.js"></script>
+        <script src="scripts/projects/logs/controllers/builds.js"></script>
+        <script src="scripts/projects/logs/controllers/deployments.js"></script>
+        <script src="scripts/projects/logs/controllers/pods.js"></script>
+        <script src="scripts/projects/logs/controllers/podLog.js"></script>
+        <script src="scripts/projects/logs/controllers/buildLog.js"></script>
+        <!-- util -->
+        <script src="scripts/services/osConfig.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
