--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -181,6 +181,7 @@
         <script src="scripts/extensions/javaLink.js"></script>
 
         <!-- logs -->
+        <script src="scripts/services/logs/logLinks.js"></script>
         <script src="scripts/controllers/logs/builds.js"></script>
         <script src="scripts/controllers/logs/pods.js"></script>
         <script src="scripts/controllers/logs/podLog.js"></script>
