--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -196,7 +196,11 @@
         <script src="scripts/directives/oscFormSection.js"></script>
         <script src="scripts/directives/oscGitLink.js"></script>
         <script src="scripts/directives/oscImageSummary.js"></script>
+
+        <!-- old/new of oscKeyValue -->
         <script src="scripts/directives/oscKeyValues.js"></script>
+        <script src="scripts/directives/oscKeyValueEntry.js"></script>
+
         <script src="scripts/directives/oscRouting.js"></script>
         <script src="scripts/directives/resources.js"></script>
         <script src="scripts/directives/overviewDeployment.js"></script>
